checkpoint-gamingjournal/src/app/dashboard/dashboard.module.css
.background{
  background: url('/SilkSong.jpg') top center no-repeat;
  background-size: cover;
  background-attachment: fixed;
  position: relative;
  min-height: 100%; /* Ensure the page takes up the full height */
  min-width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  z-index: 0;
}

.backgroundOverlay{
  width: 100%;
  height: 100%;
  position: relative;
  inset: 0;
  z-index: 1;
  pointer-events: none;
  /* Fade from transparent to dark */
  background: linear-gradient(to bottom, rgba(20, 20, 20, 0.50) 0%, #121213 25%);
}

.wrapper {
  padding-bottom: 2rem;
  padding-left: 2rem;
  padding-right: 2rem;
  padding-top: 1.4rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  z-index: 0;
  gap: 1rem;
  pointer-events: auto;
}

.dashboardHeader{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  margin-bottom: 1rem;
  width: 600px;
  gap: 0.4rem;
}

.welcomeText{
  font-size: 20px;
  font-weight: 400;
  text-align: left;
  font-family: 'Inter';
  font-style: italic;
  color: #dfdcdc;
  margin-top: 1rem;
  width: auto;
}

.dashboardTitle{
  font-size: 3rem;
  font-weight: 700;
  color: white; /* Dark text for contrast */
  text-align: left;
  font-family: 'Barlow';
  letter-spacing: 1px;
  text-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
  line-height: 1.2;
}

.profileStats,
.playingSection,
.recentEntriesSection{
  display: flex;
  flex-direction: row;
  gap: 0.4rem;
  font-weight: 800;
  margin-bottom: 1.2rem;
  background-color: #272727;
  border-radius: 8px;
  border: 1px solid #494949;
  padding: 0.4rem 0.8rem;
  align-items: flex-end;
  justify-content: space-between;
  font-family: 'Inter';
  color: #e9e9e9;
}

.titleLogo{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 0.8rem;
}

.viewMoreIcon{
  justify-self: flex-end;
  align-self: center;
  color: #a7a7a7;
  font-size: 100%;
  font-weight: 500;
  font-family: 'Poppins';
  margin-top: 0.4rem;
}

.viewMoreIcon:hover{
  color: #ffffff;
  font-weight: 600;
}

.gamesPlayingText,
.profileTitle{
  font-family: 'Inter';
  font-weight: 800;
  color: #f4f4f4;
  line-height: 1.2;
  /* Responsive font size: min 1.2rem, scales with viewport width, max 2rem */
  font-size: clamp(1.8rem, 2vw + 0.5rem, 4rem);
  text-wrap: balance;
}

.statCards {
  width: 100%;
  max-width: 98%;
}

.statusGrid {
  padding: 0.5rem;
  gap: 1rem;
}

.statusCard {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 1rem;
  gap: 1rem;
  border-radius: 8px;
  background-color: #282828;
  border: 1px solid #424242;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.statusTitle {
  font-size: 1.5rem;
  font-weight: 700;
  margin-top: 0.5rem;
  margin-bottom: 2rem;
  color: #ffffff;
  font-family: 'Inter';
  text-decoration: underline;
  text-underline-offset: 10px;
}

.statusCount {
  font-size: 4rem;
  font-weight: bold;
  color: #ffffff;
  font-family: 'Poppins';
  text-align: center;
}

.statusTotalCount{
  font-size: 1.1rem;
  font-weight: 500;
  color: #ffffff;
  font-family: 'Poppins';
  text-align: center;
}

.chartWrapper{
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.quickStatsContainer{
  width: 100%;
  max-width: 98%;
}

.quickStatsGrid{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
}

.quickStatItem{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  padding: 1rem;
  border-radius: 8px;
  background-color: #1b1a1a;
  border: 1px solid #2f2e2e;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.quickStatLabel{
  font-size: 18px;
  font-family: 'Inter';
  font-weight: 500;
  color: white;
  margin-top: 0.5rem;
  text-align: center;
}

.ratingValue,
.platValue{
  color: #e0e0e0;
  font-size: 24px;
  font-weight: 600;
  font-family: 'Inter';
}

.ratingWrapper{
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
}

.trendingGames {
  width: 100%;
  max-width: 98%; /* Add a max width to prevent it from stretching too wide */
  display: block;
  margin: 0;
  padding: 1rem 0;
}

.gameCard{
  position: relative;
  cursor: pointer;
  border-radius: 8px;
  width: 110%;
}

.imageWrapper {
  position: relative;
  width: 100%;
  height: auto;
  border-radius: 12px;
  overflow: hidden;
  cursor: pointer;
  aspect-ratio: 3 / 4;
}

.imageWrapper:hover .overlay {
  opacity: 1;
  border: 2px solid rgb(77, 76, 76);
  border-radius: 12px;
}

.cover {
  width: 100%;
  object-fit: cover;
  border-radius: 16px;
  cursor: pointer;
  border: 0.5 solid rgb(74, 74, 74);
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(15, 15, 15, 0.7);
  opacity: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: opacity 0.3s ease;
}

.gameName {
  color: white;
  font-size: 1.1rem;
  font-family: 'Noto Sans';
  font-weight: 600;
  text-align: center;
  padding: 0 8px;
}

.gameCard:hover{
  transform: scale(1.05);
  transition: transform 0.3s ease;
}

.gameCard:hover .gameName {
  opacity: 1;
}

.gamesGrid{
  display: grid;
  grid-template-columns: repeat(6, 1fr); /* Default: 5 columns */
  gap: 2.4rem;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.playingText{
  margin-top: 5rem;
}

.playingGames{
  width: 100%;
  max-width: 98%;
  padding: 1rem 0;
  display: block;
}

.recentEntriesText {
  margin-top: 4rem;
}

.noEntriesText{
  font-size: 1.5rem;
  font-weight: 300;
  color: rgb(208, 205, 205); /* Dark text for contrast */
  margin-bottom: 1rem;
  font-family: 'Poppins';
  font-style: italic;
  margin-top: 1rem;
}

.recentEntries {
  width: 100%;
  max-width: 98%;
  padding: 1rem 0;
  display: block;
}

.entriesGrid{
  gap: 1rem;
  padding: 0;
}

.entryCard {
  height: 275px;
  padding: 1rem;
  border-radius: 8px;
  background-color: #282828;
  border: 2px solid #424242;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  cursor: pointer;
}

.entryCard:hover{
  transform: scale(1.05);
  transition: transform 0.3s ease;
}

.entryGame{
  color: white;
  font-size: 1.4rem;
  font-weight: bold;
  margin-bottom: 0.5rem;
  font-family: 'Poppins';
}

.entryTitle {
  font-size: 1rem;
  font-style: italic;
  color: white;
  font-weight: 400;
  margin-bottom: 0.5rem;
  font-family: 'Poppins';
}

.entryContent {
  font-size: 1rem;
  color: #e0e0e0;
  margin-bottom: 0.5rem;
}

.entryDate {
  font-size: 0.9rem;
  font-weight: 500;
  color: #c5c5c5;
}

@media (max-width: 1920px){
  .wrapper{
    padding-left: 5rem;
    padding-right: 5rem;
  }
}

@media (max-width: 1248px) {

  .wrapper{
    padding-left: 3rem;
    padding-right: 3rem;
  }

  .gamesGrid,
  .popularGamesGrid,
  .trendingGamesGrid{
    grid-template-columns: repeat(4, 1fr);
  }

  .entriesGrid{
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 768px) {

  .wrapper{
    padding: 2rem;
  }

  .welcomeText{
    text-align: left;
  }

  .dashboardHeader{
    align-items: flex-start;
    text-align: left;
    width: auto;
    margin-bottom: 0;
  }

  .gamesGrid,
  .popularGamesGrid,
  .trendingGamesGrid {
    grid-template-columns: repeat(3, 1fr); /* 3 columns for screens smaller than 768px */
  }
  .entriesGrid {
    grid-template-columns: repeat(1, 1fr); /* 1 column for screens smaller than 768px */
  }
}


@media (max-width: 480px) {

  .backgroundOverlay{
    background: linear-gradient(to bottom, rgba(20, 20, 20, 0.7) 0%, #18181b 60%);
  }

  .welcomeText{
    font-size: 1.25rem;
  }

  .statusGrid {
    grid-template-columns: repeat(1, 1fr); /* 2 columns for screens smaller than 768px */
  }

  .gamesGrid {
    grid-template-columns: repeat(2, 1fr); /* 2 columns for screens smaller than 480px */
  }

  .trendingGamesGrid{
    grid-template-columns: repeat(2, 1fr);;
  }

  .popularGamesGrid{
    grid-template-columns: repeat(2, 1fr);
  }

  .profileStats{
    font-size: 1.2rem;
    margin-top: 1.5rem;
  }

  .viewMoreText{
    font-size: 79%;
  }
  
  .trendingSection,
  .playingSection,
  .recentEntriesSection,
  .gamesPlayingSection{
    text-align: left;
  }
  
}

@media (max-width: 320px) {
  .gamesGrid {
    grid-template-columns: repeat(1, 1fr); /* 1 column for screens smaller than 320px */
  }
}

